src/test/ui/issues/issue-69053.rs
struct r#struct<r#fn>;
//~^ WARNING should have an upper camel case name
//~^^ WARNING should have an upper camel case name
//~^^^ ERROR parameter `fn` is never used

fn main() {}
